--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Hello World</title>
+	</head>
+	<body>
+		<h1>hello world</h1>
+		<p>this is my first website</p>
+	</body>
+</html>
